--- a/nginx-gunicorn-flask-web/web/index.html
+++ b/nginx-gunicorn-flask-web/web/index.html
@@ -63,36 +63,24 @@
           <img src="images/logo/LogoSample_ByTailorBrands.jpg" alt="profile image" class="circle z-depth-2 responsive-img activator">
         </figure>
       </div>
-      <!-- <div class="row">
-        <form class="col s12">
-          <div class="row">
-            <div class="input-field col s6">
-              <i class="material-icons prefix">mode_edit</i>
-              <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-              <label for="icon_prefix2">Account ID</label>
-            </div>
-          </div>
-         </form>
-      </div>
- -->
 
 
  <div class="row wrapper">
     <form class="center col s12">
       <div class="row">
-        <div class="input-field col s12">
+        <!-- <div class="input-field col s12">
           <input id="account" type="text" class="validate">
           <label for="account" data-error="wrong" data-success="right">Account ID</label>
-        </div>
+        </div> -->
         <div class="input-field col s12">
           <input id="customer" type="text" class="validate">
           <label for="customer" data-error="wrong" data-success="right">Customer ID</label>
         </div>
       </div>
       <div class="row center">
-        <a class="waves-effect waves-light btn col l4 s4" href="./adult/">Open Adult</a>  
-        <a class="waves-effect waves-light btn col l4 s4" href="./teenager/">Open Teenager</a>
-        <a class="waves-effect waves-light btn col l4 s4" href="./kids/">Open Kids</a>
+        <a class="waves-effect waves-light btn adult col l4 s4" href="./adult/">Open Adult</a>  
+        <a class="waves-effect waves-light btn teenager col l4 s4" href="./teenager/">Open Teenager</a>
+        <a class="waves-effect waves-light btn kid col l4 s4" href="./kid/">Open Kids</a>
       </div>
     </form>
   </div>
